Fixed croppie issue on signup, fixed sign up mobile styles and submission

--- a/assets/css/SignUp.css
+++ b/assets/css/SignUp.css
@@ -59,6 +59,7 @@ max-width: 100%;
 
 .croppie-container{
     margin-left:0!important;
+    width:100%;
 }
 .major-list-item {
     list-style-type:none!important;
@@ -78,6 +79,7 @@ max-width: 100%;
 }
 .img-btn-container {
     display:inline-block;
+    width:100%;
 }
 .result1 img {
       width:30px!important;
@@ -106,10 +108,12 @@ max-width: 100%;
       display:none;
   }
   .upload-file {
-      margin-left:5%;
+    
       margin-right:auto;
       margin-top:5px;
       margin-bottom:5px;
+      width:200px;
+      font-size:14px;
   }
   .img-btn{
     padding-left: 13px;
@@ -117,6 +121,7 @@ max-width: 100%;
     cursor:pointer;
     color:white;
     font-size:14px!important;
+    left:0;
   }
   .img-btn1{
     padding-left: 13px;
@@ -187,19 +192,34 @@ max-width: 100%;
     font-weight: 500;
     text-align:left;
 }
-
+/* .cr-overlay{
+    width:420px!important;
+    height:420px!important;
+} */
   .img-upload-container{
     display:none;
-    position:absolute;
+    position:relative;
+    margin-left:auto;
+    margin-right:auto;
+    text-align:center;
     top:0;
     width:410px;
     z-index:3;
-    margin-left:40%;
     left:0;
  }
-
+.cr-image{
+    left:0;
+} 
+.fileUpload{
+    padding-left:15%!important;
+    padding-right:15%!important;
+    margin-left:150px;
+    margin-right:150px;
+}
+.page-container {
+    background-color: #18191a!important;
+}
  /* mobile view */
- 
 @media only screen and (max-width: 1000px) { 
     .input-field1{
         width:100%;
@@ -212,12 +232,19 @@ max-width: 100%;
         padding-bottom:7px;
         outline:0!important;
     }
+    .fileUpload{
+        padding-left:15%!important;
+        padding-right:15%!important;
+        margin-left:0px;
+        margin-right:0px;
+    }
     .input-container2{
         background-color:#18191a!important;
 
     }
     .signup-form{
         padding-top:50px!important;
+        text-align:center;
     }
     .loginBtnSignUp {
        font-size:15px!important;
@@ -229,6 +256,7 @@ max-width: 100%;
         padding-bottom:20px!important;
         font-family:"Open sans", "sans-serif";
     }
+
     .disclaimerText h3{
         color:white;
         font-size:15px;
@@ -237,4 +265,10 @@ max-width: 100%;
     .signup-container-mobile {
         background-color:#18191a!important;
     }
+    .signup-container{
+        padding-bottom:0!important;
+    }
+}
+.disclaimerText h3{
+    color:white;
 }
