--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -113,7 +113,7 @@
     
 }
 .logo{
-    width:110px;
+    width:130px;
     margin-right:50px;
 }
 .mobileHomeImg{
