--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -21,6 +21,7 @@
 #img-btn h3{
   font-size:18px!important;
 }
+
 #settingsWrapper{
     width:100%;
     text-align:left;
@@ -212,10 +213,10 @@ input[type=range]::-webkit-slider-thumb {
 .picX strong{
   color:white!important;
 }
-.croppie-container{
+/* .croppie-container{
   margin-left:0!important;
-}
-.upload-result{
+} */
+/* .upload-result{
   cursor:pointer;
   width:20%;
   text-align:center;
@@ -225,4 +226,4 @@ input[type=range]::-webkit-slider-thumb {
   border-radius:5px;
   margin-bottom:10px;
   border-radius:30px!important;
-}
+} */
