--- a/assets/css/updatePassword.css
+++ b/assets/css/updatePassword.css
@@ -12,7 +12,7 @@
     margin-left: auto;
     width: 300px;
 }
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 1000px) {
     #submitPword{
         width: 275px;
     }
